<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_move</name>
  <version>1.0.0</version>
  <description>
    The turtlesim_move package launches gotogoal with turtlesim, allowing control of turtlesim using
    Euclidean distance. 
  </description>
  <maintainer email="dean24@up.edu">dean24-up</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>turtlesim</exec_depend>

</package>
